-*- mode: outline -*-

* Version 0.27, released 2009-03-28

** bug fixes

Fixed several issues that came up with Allegro CL 8.1.  (Thanks to
Utz-Uwe Haus.)

Fixed compilation issues when the user had a non-standard *PRINT-CASE*.
(Thanks to Gustavo.)

Fixed an issue with LispWorks's recent update for conformance with
DEFSTRUCT's specification.  (Thanks to John Fremlin.)

** improvements

HMAC-DIGEST now supports placing the produced digest into a
user-provided buffer.  Please see the documentation for details.

HMAC now supports digests with larger block sizes than 64 bytes (such as
SHA2-512).

HMAC should be somewhat more efficient when producing digests.

REINITIALIZE-INSTANCE is now supported on HMAC objects.  Please see the
documentation for details.

CLEAR-OUTPUT is now supported on digesting streams.

** new features

The SHA-224, SHA2-384 and SHA2-512 digest functions have been added,
with tests.

Key derivation functions from PKCS #5 have been added.

On Gray streams-supporting implementations, WRITE-SEQUENCE is supported
on several stream classes, with more to come.

* Version 0.26, released 2008-05-17

** bug fixes

RC6 now compiles without error on non-x86 SBCL.  (Thanks to Kevin Reid.)

** incompatible changes

PRODUCE-DIGEST now *modifies* the state of the digest object passed to
it.  If you want to preserve that state for later, you will have to
explicitly call COPY-DIGEST.

** improvements

Compiler macros were added to improve the performance of
DIGEST-{SEQUENCE,STREAM,FILE}.  (Thanks to Attila Lendvai for motivating
this.)

Digest performance should be improved due to using structures; this
change should bring digest performance back in line with where it was
circa version 0.22.

* Version 0.25, released 2008-02-24

** bug fixes

CRC32 now works properly and agrees with other CRC32 implementations.
(Thanks to Todd Sabin.)

The testsuite is once again included.  (Thanks to Peter Graves for
pointing out the missing files.)

** improvements
